#
# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.
#

package(default_visibility = ["//visibility:public"])

load("@rules_foreign_cc//foreign_cc:defs.bzl", "make")
load("@hedron_compile_commands//:refresh_compile_commands.bzl", "refresh_compile_commands")

make(
    name = "cryptopp",
    lib_source = "@cryptopp//:all_srcs",
    out_static_libs = ["libcryptopp.a"],
)

cc_library(
    name = "cryptopp_lib",
    deps = [
        ":cryptopp",
    ],
)

# Generates compile_commands.json for IDE IntelliSense. Does NOT run on "bazel build".
# Run once (or after adding new C++ targets): bazel run //:refresh_compile_commands
refresh_compile_commands(
    name = "refresh_compile_commands",
    targets = [
        "//tools:rdma_proposal",
    ],
)
